--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -52,34 +52,34 @@
 }
 
 /* Radio Button Styling */
-:global(fieldset) {
+.fieldset {
   border: none;
   padding: 10px;
   display: flex;
   justify-content: space-around;
 }
 
-:global(label) {
+.label {
   font-size: 1.1em;
   margin-left: 8px;
   cursor: pointer;
-  color: #666; /* Geist Gray */
+  color: #666;
   transition: color 0.3s;
 }
 
-:global(input[type="radio"]) {
+.radio {
   display: none;
 }
 
 /* Custom radio button styles */
-:global(input[type="radio"] + label) {
+.radio + .label {
   position: relative;
   padding-left: 30px;
   transition: color 0.3s;
 }
 
 /* Circle design for radio button */
-:global(input[type="radio"] + label:before) {
+.radio + .label:before {
   content: "";
   position: absolute;
   left: 0;
@@ -87,28 +87,28 @@
   transform: translateY(-50%);
   width: 20px;
   height: 20px;
-  border: 2px solid #c6c6c6; /* Geist Light Gray */
+  border: 2px solid #c6c6c6;
   border-radius: 50%;
   box-sizing: border-box;
   transition: background-color 0.3s, border-color 0.3s;
 }
 
 /* Filled circle for selected state */
-:global(input[type="radio"]:checked + label:before) {
-  background-color: white; /* Geist Blue */
-  border-color: white; /* Geist Blue */
+.radio:checked + .label:before {
+  background-color: white;
+  border-color: white;
 }
 
 /* Change label color when selected */
-:global(input[type="radio"]:checked + label) {
-  color: white; /* Geist Blue */
-}
-
-/* Add hover effect */
-:global(input[type="radio"] + label:hover) {
+.radio:checked + .label {
   color: white;
 }
 
-:global(input[type="radio"] + label:before:hover) {
-  border-color: white; /* Geist Blue */
+/* Add hover effect */
+.radio + .label:hover {
+  color: white;
+}
+
+.radio + .label:before:hover {
+  border-color: white;
 }
