--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   position: fixed;
-  top: 30%;
+  top: 30vh;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent background */
