--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,19 +1,29 @@
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /*background-color: rgba(0, 0, 0, 0.5);*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
 .modal {
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: fixed;
-  top: 30vh;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent background */
+  background-color: rgba(0, 0, 0, 0.8);
   color: white;
   padding: 20px;
   border-radius: 8px;
   text-align: center;
   width: 80%;
-  max-width: 400px; /* Limits the modal size */
+  max-width: 400px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  margin-top: -90px;
 }
 
 .text {
