--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@ body {
   line-height: 1.5;
   /* 4. Improve text rendering */
   -webkit-font-smoothing: antialiased;
+  overflow: hidden;
 }
 
 /* 5. Improve media defaults */
