--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -10,9 +10,9 @@
   align-items: center;
   justify-items: center;
   min-height: 100svh;
-  padding: 80px;
   gap: 64px;
   font-family: var(--font-geist-sans);
+  margin-top: -90px;
 }
 
 @media (prefers-color-scheme: dark) {
