dark mode added

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -157,8 +157,6 @@ a.secondary {
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
-  }
+[data-color-theme="dark"] body {
+  background-color: #020817;
 }
