--- a/src/components/GameBoard/GameBoard.module.css
+++ b/src/components/GameBoard/GameBoard.module.css
@@ -29,3 +29,7 @@
   font-family: "Pixelify Sans", sans-serif;
   font-optical-sizing: auto;
 }
+
+[data-color-theme="dark"] .title {
+  color: white;
+}
