--- a/src/components/Scoreboard/Scoreboard.module.css
+++ b/src/components/Scoreboard/Scoreboard.module.css
@@ -17,14 +17,14 @@
 }
 
 .confettiWrapper {
-  position: fixed; /* Change to fixed instead of absolute */
-  top: 17%; /* Center vertically */
-  left: 50%; /* Center horizontally */
-  transform: translate(-50%, -50%); /* Center the wrapper */
-  width: 100vw; /* Full viewport width */
-  height: 100vh; /* Full viewport height */
-  z-index: 3; /* Higher z-index to ensure it's above everything */
-  pointer-events: none; /* Allow clicking through the confetti */
+  position: fixed;
+  top: 17%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100vw;
+  height: 100vh;
+  z-index: 3;
+  pointer-events: none;
 }
 
 [data-color-theme="dark"] .scores {
