font optimization and loading state

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,7 +6,8 @@
   --button-primary-hover: #383838;
   --button-secondary-hover: #f2f2f2;
 
-  grid-template-rows: 20px 1fr 20px;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
   align-items: center;
   justify-items: center;
   min-height: 100svh;
